# printfix

./: .dockerignore  .gitignore  .markdownlint.json  Dockerfile  PLAN.md  README.md  USAGE.md  main.py  pyproject.toml  run.sh
app/: __init__.py  __main__.py  main.py
app/api/: deps.py  printfix.py
app/context/: printfix.py
app/core/: ai.py  cache.py  config.py  db.py  effort.py  integrity.py  log.py  prompts.py  rate_limit.py  rendering.py  retry.py  storage.py
app/diagnosis/: __init__.py  merge.py  structural_docx.py  structural_pdf.py  structural_pptx.py  structural_xlsx.py  visual.py
app/fixes/: __init__.py  cleanup.py  common.py  images.py  page_breaks.py  page_layout.py  pdf_fallback.py  pptx.py  tables.py  typography.py  xlsx.py
app/orchestration/: __init__.py  convergence.py  executor.py  orchestrator.py  planner.py
app/prompts/: fix_planning.yaml.j2  merge_diagnosis.yaml.j2  structural_review.yaml.j2  verification.yaml.j2  visual_inspection.yaml.j2
app/schema/: diagnosis.py  fix.py  integrity.py  job.py  log_entry.py  memory.py  orchestration.py  status.py  verification.py
app/static/css/: custom.css
app/templates/: base.html.j2  index.html.j2  job.html.j2
app/util/: base_dir.py  printfix.py  text.py
app/verification/: __init__.py
app/worker/: __init__.py  broker.py  job_state.py  tasks.py
